--- a/dev/patchify.ipynb
+++ b/dev/patchify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2e9b8ac4",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,7 @@
     "from rasterio import features\n",
     "from shapely.affinity import affine_transform\n",
     "from PIL import Image \n",
+    "import importlib\n",
     "\n",
     "## import the function\n",
     "from src.utils.util import load_config, load_json\n",
